gitops/Frontend/Frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glotixz-frontend
  labels:
    type: stage-depl
    svcname: frontend-svc
    version: v1
    deployment: bluedeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glotixz-frontend
      version: v1
  template:
    metadata:
      labels:
        app: glotixz-frontend
        version: v1
    spec:
      serviceAccountName: glotixz-frontend
      containers:
        - name: glotixz-frontend
          image: quay.io/ultimatestack/frontend:blue
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
